--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,25 @@
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon_menu">
           </button>
+          <div class="rightside-menu rightside-menu--close">
+            <button class="rightside-menu__close">
+              <img src="images/close.svg" alt="">
+            </button>
+            <div class="rightside-menu__content">
+              <a href="#" class="rightside-menu__logo">
+                <img src="images/logo-big.png" alt="logo">
+              </a>
+              <h4 class="rightside-menu__title">
+                Furniture for life
+              </h4>
+              <p class="rightside-menu__text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1
+                art party microdosing, put a bird on it brooklyn
+              </p>
+              <img class="rightside-menu__images" src="images/rightside-img.jpg" alt="">
+            </div>
+
+          </div>
         </div>
       </div>
     </header>
